package project.backend.carts.cart;

public enum CartStatus {
    PENDING,
    COMPLETED,
    CANCELLED
}
