package project.backend.courses.course;

public enum TargetAudience {
    BEGINNER,
    INTERMEDIATE,
    ADVANCED
}
