package project.backend.users.rating;

public class Rating {
}
